@@ -1,5 +1,10 @@
 # for display continuity sake please use 2 spaces instead of tabs
 
+2013-05-25 mmichaud <michael.michaud@free.fr>
+  * 3613870 fixed : cloning sextante raster layer was creating a unique name
+  * 3612322 fixed :  "Create point grid", "Create lattice" and "Raster profile"
+    does not throw a NPE on a pasted Sextante Raster Layer any more
+
 2013-05-24 Matthias Scholz <ms@jammerhund.de>
   * AddDatastoreLayerPanel.populateDatasetComboBox():
       avoid a NPE, if there are no spatial enabled tables in this database
